# GEP

./: CMakeLists.txt  Doxyfile  Doxyfile.bak
Resources/: curuthers2.shader
src/Engine/: Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Keyboard.cpp  Keyboard.h  Material.cpp  Material.h  MaterialAttribute.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  NonCopyable.cpp  NonCopyable.h  Resource.cpp  Resource.h  Resources.h  TriRend.cpp
src/Game/: main.cpp
src/Game/Shaders/: shade.txt
src/rend/: Mesh.cpp  Mesh.h
